[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["rroskam <raiderrobert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.7.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
